--- a/src/views/yugioh/as/as.scss
+++ b/src/views/yugioh/as/as.scss
@@ -1,10 +1,9 @@
 .as-class {
-    font-family: astral, serif;
+    font-family: ygo-astral, serif;
 
     .card-name {
-        font-family: astral, serif;
         top: 95px;
-        font-size: 108.01px;
+        font-size: 108px;
         letter-spacing: -2px;
     }
 
