--- a/src/views/yugioh/en/en.scss
+++ b/src/views/yugioh/en/en.scss
@@ -21,6 +21,19 @@
         }
     }
 
+    .spell-trap-link {
+        font-family: ygo-en-race, serif;
+        top: 249px;
+        font-size: 74px;
+        letter-spacing: 1px;
+        right: 250px;
+
+        .spell-trap-icon {
+            margin-left: 10px;
+            margin-bottom: -20px;
+        }
+    }
+
     .pendulum-description {
         top: 1278px;
         font-size: 42px;
