--- a/src/views/yugioh/jp/jp.scss
+++ b/src/views/yugioh/jp/jp.scss
@@ -18,6 +18,17 @@
         }
     }
 
+    .spell-trap-link {
+        top: 250px;
+        font-size: 80px;
+        right: 250px;
+        letter-spacing: -2px;
+
+        .spell-trap-icon {
+            margin-top: 10px;
+        }
+    }
+
     .pendulum-description {
         top: 1286px;
         font-size: 36px;
