--- a/src/views/yugioh/or/or.scss
+++ b/src/views/yugioh/or/or.scss
@@ -1,5 +1,5 @@
-.as-class {
-    font-family: ygo-astral, serif;
+.or-class {
+    font-family: ygo-orichalcos, serif;
 
     .card-name {
         top: 95px;
@@ -9,7 +9,7 @@
 
     .spell-trap {
         top: 250px;
-        font-size: 80px;
+        font-size: 72px;
         right: 140px;
         letter-spacing: -2px;
 
@@ -20,7 +20,7 @@
 
     .spell-trap-link {
         top: 250px;
-        font-size: 80px;
+        font-size: 70px;
         right: 250px;
         letter-spacing: -2px;
 
