--- a/src/views/yugioh/tc/tc.scss
+++ b/src/views/yugioh/tc/tc.scss
@@ -16,6 +16,16 @@
         }
     }
 
+    .spell-trap-link {
+        top: 256px;
+        font-size: 76px;
+        right: 214px;
+
+        .spell-trap-icon {
+            margin-left: 10px;
+        }
+    }
+
     .pendulum-description {
         top: 1282px;
         font-size: 36px;
