--- a/src/views/yugioh/sc/sc.scss
+++ b/src/views/yugioh/sc/sc.scss
@@ -17,6 +17,17 @@
         }
     }
 
+    .spell-trap-link {
+        top: 256px;
+        font-size: 76px;
+        right: 214px;
+        letter-spacing: 2px;
+
+        .spell-trap-icon {
+            margin-left: 10px;
+        }
+    }
+
     .pendulum-description {
         top: 1282px;
         font-size: 36px;
