--- a/src/views/yugioh/sc/sc.scss
+++ b/src/views/yugioh/sc/sc.scss
@@ -30,19 +30,19 @@
 
     .pendulum-description {
         top: 1282px;
-        font-size: 36px;
+        font-size: calc(36px * var(--descriptionZoom));
         letter-spacing: 2px;
         line-height: 1.2;
     }
 
     .card-description {
         top: 1528px;
-        font-size: 36px;
+        font-size: calc(36px * var(--descriptionZoom));
         letter-spacing: 2px;
         line-height: 1.2;
 
         .card-effect {
-            font-size: 44px;
+            font-size: calc(44px * var(--descriptionZoom));
             text-indent: -0.5em;
         }
     }
